--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,18 +1,12 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.piotrzielinski1994.zentheme</id>
-    <name>zen-theme</name>
+    <name>ZET Theme</name>
     <vendor>piotrzielinski1994</vendor>
 
     <depends>com.intellij.modules.platform</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <applicationService serviceImplementation="com.github.piotrzielinski1994.zentheme.services.MyApplicationService"/>
-        <projectService serviceImplementation="com.github.piotrzielinski1994.zentheme.services.MyProjectService"/>
+        <themeProvider id="com.github.piotrzielinski1994.zentheme" path="/theme/zen-theme.theme.json" />
     </extensions>
-
-    <applicationListeners>
-        <listener class="com.github.piotrzielinski1994.zentheme.listeners.MyProjectManagerListener"
-                  topic="com.intellij.openapi.project.ProjectManagerListener"/>
-    </applicationListeners>
 </idea-plugin>
